--- a/style.css
+++ b/style.css
@@ -91,6 +91,95 @@ a {
   padding: 15px;
 }
 
+.main-section-two {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header-information {
+  font-size: 36px;
+  color: #1f2937;
+  font-weight: 900;
+  padding: 40px;
+}
+
+.boxes-container {
+  display: flex;
+  gap: 50px;
+  padding-bottom: 120px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.item {
+  text-align: center;
+  width: 170px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+}
+
+.text-item {
+  font-size: 18px;
+  color: #1f2937;
+}
+
+.box {
+  border: #3882f6 solid 3px;
+  width: 170px;
+  height: 170px;
+  border-radius: 7px;
+}
+
+.main-section-three {
+  background-color: #e5e7eb;
+  padding: 150px 300px;
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 300;
+}
+
+.sign-cite {
+  padding: 8px 50px 0 0;
+  font-weight: bold;
+  font-size: 22px;
+  text-align: right;
+}
+
+.frame-message {
+  background-color: #3882f6;
+  margin: 80px 150px;
+  color: #f9faf8;
+  padding: 40px 120px;
+  border-radius: 7px;
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 190px;
+}
+
+.header-message {
+  font-size: 22px;
+  font-weight: bold;
+  padding-bottom: 2px;
+}
+
+.button-two {
+  background-color: #3882f6;
+  border: #f9faf8 solid 2px;
+  border-radius: 7px;
+  padding: 8px 26px;
+  color: #f9faf8;
+  font-weight: bold;
+  margin-top: 10px;
+  flex: 0 0 auto;
+  max-height: 40px;
+}
+
 ul {
   list-style: none;
 }
@@ -98,4 +187,9 @@ ul {
 a {
   color: #f9faf8;
   text-decoration: none;
+}
+
+footer {
+  padding: 40px;
+  text-align: center;
 }
